# soundboard

./: .gitignore  README.md
.github/workflows/: release.yml
.specs/features/audio-core/: design.md  spec.md  tasks.md
.specs/features/installer/: spec.md
.specs/features/rvc-inference/: design.md  spec.md  tasks.md
.specs/features/soundboard-ui/: design.md  spec.md  tasks.md
.specs/features/voice-effects/: spec.md
.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
src-cpp/: CMakeLists.txt  RVCOnnxEngine.cpp  RVCOnnxEngine.h  VoiceEffects.h  main.cpp  mel_basis.h  test_hubert.cpp  test_netg.cpp
src-ui/: package-lock.json  package.json
src-ui/src/: App.tsx  index.css
src-ui/src-tauri/: Cargo.toml  tauri.conf.json
src-ui/src-tauri/capabilities/: default.json
src-ui/src-tauri/src/: main.rs
src-ui/src/components/: ModelRegistrationModal.tsx  SoundButton.tsx  SoundEditorModal.tsx
